# GHCframework

./: .gitignore  .gitmodules  README.md  haskell-binary.entitlements
Docs/: Release Notes.pages
GHC/: GHC.h  GHC.swift  Info.plist  build.mk.release  ghc-
GHC.xcodeproj/: project.pbxproj
GHC/GHC/: GHC.h  Info.plist  build.mk.release
GHC/GHC.xcodeproj/: project.pbxproj
GHCBuild/: BuildContainer.sh  BuildGHC.sh  Dockerfile  Info.plist  InstallPackages.sh  build.mk.debug  build.mk.release  cabal.config  cc-dylib-rpath-wrapper.sh  container-cabal.config  extra-packages  ghc-dylib-rpath-wrapper.sh  ghc-packages
GHCBuild.xcodeproj/: project.pbxproj
GHCBuild/GHC/: build.mk.debug  build.mk.release  extra-packages  ghc-packages
GHCBuild/GHCBuild.xcodeproj/: project.pbxproj
HFMWorkspace.xcworkspace/: contents.xcworkspacedata
HaskellCLI/: BuildPKG.sh  Distribution  HaskellCLIStatus.sh  MakeHaskellCLIDefault.sh  RunCLICommand.sh  RunHaskellTerminal.sh  SetupCLI.sh  StopCLICommand.sh  alex.sh  c2hs.sh  cabal.config  cabal.sh  cpphs.sh  ghc-pkg.sh  ghc.sh  ghci.sh  haddock.sh  happy.sh  hpc.sh  hsc2hs.sh  runghc.sh
HaskellCLI/CLITree/: CreateDistributionTree.sh  Info.plist
HaskellCLI/Cabal/: 00-index.cache  00-index.tar.gz.etag  cabal.config
HaskellForMac/: ToolWrapper
HaskellForMac/GHCKit/ghckit-support/: PrintInterceptor.hs  ghckit-support.cabal  stableChanPtr.c
RelocateGHC/: main.swift
RelocateGHC.xcodeproj/: project.pbxproj
StandardizePath/: main.swift
ToolWrapper/: main.swift
ToolWrapper.xcodeproj/: project.pbxproj
rts/: Linker.c
(+139 files in other folders)
